--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
-  "name": "yemao-bot",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  "name": "yemao-qq-bot",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "dependencies": {},
+  "typescript": "^4.9.5",
+  "tsc": "^2.0.4",
+  "devDependencies": {
+    "@types/node": "^18.14.0",
+    "nodemon": "^2.0.20",
+    "ts-node-dev": "^2.0.0",
+    "tsc": "^2.0.4",
+    "typescript": "^4.9.5"
   },
-  "dependencies": {
-    "@next/font": "13.1.6",
-    "@types/node": "18.14.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
-  }
+  "scripts": {
+    "build": "tsc",
+    "start": " ts-node-dev --respawn src/index.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HicirTech/yemaoQQBot.git"
+  },
+  "keywords": [
+    "bot"
+  ],
+  "author": "yemao",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/HicirTech/yemaoQQBot/issues"
+  },
+  "homepage": "https://github.com/HicirTech/yemaoQQBot#readme"
 }
