--- a/package.json
+++ b/package.json
@@ -3,19 +3,28 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "type": "module",
+  "dependencies": {
+    "express": "^4.18.2",
+    "oicq": "^2.3.1",
+    "pocketbase": "^0.11.0",
+    "signale": "^1.4.0"
+  },
   "typescript": "^4.9.5",
   "tsc": "^2.0.4",
   "devDependencies": {
+    "@tsconfig/node17": "^1.0.2",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.14.0",
+    "@types/signale": "^1.4.4",
     "nodemon": "^2.0.20",
-    "ts-node-dev": "^2.0.0",
+    "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
     "typescript": "^4.9.5"
   },
   "scripts": {
     "build": "tsc",
-    "start": " ts-node-dev --respawn src/index.ts"
+    "start": " nodemon src/index.ts"
   },
   "repository": {
     "type": "git",
