--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
   "compilerOptions": {
     "module": "NodeNext",
+    "esModuleInterop": true,
     "moduleResolution": "NodeNext",
     "target": "ES2020",
     "sourceMap": true,
     "outDir": "dist"
+  },
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   },
   "include": ["src/**/*"]
 }
