--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "oicq": "^2.3.1",
+    "p-wait-for": "^5.0.0",
     "pocketbase": "^0.11.0",
     "signale": "^1.4.0"
   },
