--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "type": "module",
   "dependencies": {
     "express": "^4.18.2",
+    "fs-extra": "^11.1.0",
     "oicq": "^2.3.1",
     "p-wait-for": "^5.0.0",
+    "path": "^0.12.7",
     "pocketbase": "^0.11.0",
     "signale": "^1.4.0"
   },
